// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comoponents/rhs_card/RhsCard should match on post when no plugin defining card types 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <Connect(DateSeparator)
        date={2018-11-23T17:43:15.740Z}
      />
      <div
        className="card-info-channel__name"
      >
        Town Square
      </div>
      <Connect(Post)
        key="post 123"
        maxHeight={150}
        post={
          Object {
            "create_at": 1542994995740,
            "id": "123",
            "message": "test",
            "type": "test",
          }
        }
      />
      <div
        className="card"
      >
        <Connect(Markdown) />
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`comoponents/rhs_card/RhsCard should match on post when plugin defining card types don't match with the post type 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <Connect(DateSeparator)
        date={2018-11-23T17:43:15.740Z}
      />
      <div
        className="card-info-channel__name"
      >
        Town Square
      </div>
      <Connect(Post)
        key="post 123"
        maxHeight={150}
        post={
          Object {
            "create_at": 1542994995740,
            "id": "123",
            "message": "test",
            "type": "test",
          }
        }
      />
      <div
        className="card"
      >
        <Connect(Markdown) />
      </div>
    </div>
  </Scrollbars>
</div>
`;

exports[`comoponents/rhs_card/RhsCard should match on post when plugin defining card types match with the post type 1`] = `
<div
  className="sidebar-right__body sidebar-right__card"
>
  <Connect(RhsCardHeader) />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="post-right__scroll"
    >
      <Connect(DateSeparator)
        date={2018-11-23T17:43:15.740Z}
      />
      <div
        className="card-info-channel__name"
      >
        Town Square
      </div>
      <Connect(Post)
        key="post 123"
        maxHeight={150}
        post={
          Object {
            "create_at": 1542994995740,
            "id": "123",
            "message": "test",
            "type": "test",
          }
        }
      />
      <component
        post={
          Object {
            "create_at": 1542994995740,
            "id": "123",
            "message": "test",
            "type": "test",
          }
        }
      />
    </div>
  </Scrollbars>
</div>
`;

exports[`comoponents/rhs_card/RhsCard should match when no post is selected 1`] = `<div />`;
